// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "hot",
  "intro": true,
  "listStyle": "row",
  "searchIndexCount": 0,
  "tag": "",
  "theme": "day",
}
`;

exports[`2- location change. should change filter and tag 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "intro": true,
  "listStyle": "row",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "day",
}
`;

exports[`3- theme change 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "intro": true,
  "listStyle": "row",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`4- hide intro 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "intro": false,
  "listStyle": "row",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;

exports[`5- list style change 1`] = `
Object {
  "canUseWebp": false,
  "currency": "usd",
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "intro": false,
  "listStyle": "grid",
  "searchIndexCount": 0,
  "tag": "bitcoin",
  "theme": "night",
}
`;
